--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/core": "^0.34.2",
     "@faker-js/faker": "^9.7.0",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.7",
@@ -44,6 +45,7 @@
     "react-hook-form": "^7.55.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.24.2"
