--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@types/dompurify": "^3.2.0",
     "@types/leaflet": "^1.9.17",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.2.5",
     "geist": "^1.3.1",
     "leaflet": "^1.9.4",
@@ -48,6 +50,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
