--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@types/dompurify": "^3.2.0",
     "@types/leaflet": "^1.9.17",
+    "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -44,6 +45,8 @@
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "next-i18next": "^15.4.2",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
